--- a/action.yml
+++ b/action.yml
@@ -20,14 +20,14 @@ runs:
       shell: bash
       run: |
         echo "passed=$(jq 'to_entries | map(.value) | (map(.additionCount + .deletionCount) | ${{ inputs.minimum-lines }} <= add) and (map (.fileCount) | ${{ inputs.minimum-files }} <= add)' <<< '${{ inputs.diff-stat }}')" >> "${GITHUB_OUTPUT}"
-    - if: steps.condition.passed
+    - if: steps.condition.outputs.passed
       uses: peter-evans/find-comment@v2
       id: find-comment
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
         body-includes: '<!-- Paths Filter with Diff Stat -->'
-    - if: steps.condition.passed
+    - if: steps.condition.outputs.passed
       id: make-comment-body
       shell: bash
       run: |
@@ -37,7 +37,7 @@ runs:
         COMMENT_BODY="${COMMENT_BODY//$'\n'/'%0A'}"
         COMMENT_BODY="${COMMENT_BODY//$'\r'/'%0D'}"
         echo "::set-output name=comment_body::$COMMENT_BODY"
-    - if: steps.condition.passed
+    - if: steps.condition.outputs.passed
       uses: peter-evans/create-or-update-comment@v2
       id: create-or-update-comment
       with:
