Fix conditional check
The output appears to be treated as a string and if you use a string as
a boolean value then it's true if non-empty, false if empty.  So before
this change the condition was always evaluating to true.

--- a/action.yml
+++ b/action.yml
@@ -20,14 +20,14 @@ runs:
       shell: bash
       run: |
         echo "passed=$(jq 'to_entries | map(.value) | (map(.additionCount + .deletionCount) | ${{ inputs.minimum-lines }} <= add) and (map (.fileCount) | ${{ inputs.minimum-files }} <= add)' <<< '${{ inputs.diff-stat }}')" >> "${GITHUB_OUTPUT}"
-    - if: steps.condition.outputs.passed
+    - if: steps.condition.outputs.passed == 'true'
       uses: peter-evans/find-comment@v2
       id: find-comment
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
         body-includes: '<!-- Paths Filter with Diff Stat -->'
-    - if: steps.condition.outputs.passed
+    - if: steps.condition.outputs.passed == 'true'
       id: make-comment-body
       shell: bash
       run: |
@@ -36,7 +36,7 @@ runs:
         echo "comment_body<<PR_COMMENT_EOF" >> $GITHUB_OUTPUT
         echo "$COMMENT_BODY" >> $GITHUB_OUTPUT
         echo "PR_COMMENT_EOF" >> $GITHUB_OUTPUT
-    - if: steps.condition.outputs.passed
+    - if: steps.condition.outputs.passed == 'true'
       uses: peter-evans/create-or-update-comment@v2
       id: create-or-update-comment
       with:
